--- a/main.css
+++ b/main.css
@@ -19,9 +19,10 @@
 				position: fixed;
 				inset: 0;
 				margin: auto;
-				width: min(90vw, 360px);
-				padding: 32px 28px;
-
+				max-width: min(90vw, 360px);
+                height: fit-content;
+				padding: 68px 28px;
+				
 				display: flex;
 				flex-direction: column;
 				gap: 16px;
@@ -155,4 +156,5 @@
 				text-align:left; 
 				margin:0; 
 				padding-left:18px;
+
 			}
